Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/025_rem_trueture.xi
f():bool
{
    return true % true
}

//@PRACOWNIA
//@should_not_typecheck
